--- a/app/src/main/res/layout/ui_textbox_maker.xml
+++ b/app/src/main/res/layout/ui_textbox_maker.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <!--This layout sets the size/dimensions of the box-->
     <com.google.android.material.textfield.TextInputLayout
@@ -10,12 +10,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:hint="@string/HintTextDefault"
+        android:layout_marginBottom="8dp"
+        app:hintEnabled="false"
         app:boxStrokeColor="@color/accent_color"
         app:counterTextColor="@color/accent_color"
         app:hintTextColor="@color/accent_color"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,7 +25,8 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/enteredText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="8dp"
             android:textCursorDrawable="@null"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
