--- a/app/src/main/res/layout/popup_counter.xml
+++ b/app/src/main/res/layout/popup_counter.xml
@@ -50,7 +50,7 @@
         android:layout_width="17dp"
         android:layout_height="17dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/help_icon"
+        android:background="@drawable/help_icon_red"
         app:layout_constraintBottom_toTopOf="@+id/number_counter_example"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.3"
