--- a/app/src/main/res/layout/popup_segment.xml
+++ b/app/src/main/res/layout/popup_segment.xml
@@ -191,7 +191,7 @@
         android:layout_width="17dp"
         android:layout_height="17dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/help_icon"
+        android:background="@drawable/help_icon_red"
         app:layout_constraintBottom_toTopOf="@+id/multi_example"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
