--- a/app/src/main/res/layout/popup_teammatch.xml
+++ b/app/src/main/res/layout/popup_teammatch.xml
@@ -67,7 +67,7 @@
       android:layout_width="17dp"
       android:layout_height="17dp"
       android:layout_marginBottom="24dp"
-      android:background="@drawable/help_icon"
+      android:background="@drawable/help_icon_red"
       app:layout_constraintBottom_toTopOf="@+id/team_match"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.83"
